--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -20,5 +20,8 @@
 
 #modal-content {
   position: absolute;
-  background-color:white;
+  background-color: white;
+  border-radius: 15px;
+  padding: 5px 5px 40px 5px;
+  min-width: 450px;
 }
