--- a/frontend/src/components/LandingPage/Landing.css
+++ b/frontend/src/components/LandingPage/Landing.css
@@ -1,62 +1,7 @@
-.spots-container {
+.all-spots-container {
   /* border: red solid 5px; */
   display: grid;
   grid-template-columns: repeat(4, 24.4%);
   overflow: hidden;
   gap: 15px;
 }
-
-.spot {
-  /* border: green solid 2px; */
-  aspect-ratio: 1 / 1;
-}
-
-.tooltip {
-  position: relative;
-  display: inline-block;
-}
-
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 50%;
-  background-color: rgba(211, 223, 219, 0.8);
-  color: black;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
-  position: absolute;
-  bottom: 50%;
-  left: 50%;
-  transform: translate(-50%, 50%);
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
-}
-
-.image-container {
-  position: relative;
-  width: 100%;
-}
-
-.image {
-  width: 100%;
-}
-
-.image:hover {
-  cursor: pointer;
-}
-
-.info {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  justify-content: space-between;
-  /* border: palegreen solid 1px; */
-}
-/*
-.fa-star {
-  color: yellow;
-} */
