--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -32,3 +32,47 @@ body {
 .small-images {
   width: 100%;
 }
+
+.detail-info {
+  display: grid;
+  grid-template-columns: repeat(2, 65% 35%);
+  /* border: red solid 2px; */
+  padding-top: 10px;
+  padding-bottom: 20px;
+  border-bottom: black solid 1px;
+}
+
+.reservation-container {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+  border: black solid 1px;
+  border-radius: 15px;
+  padding: 10px;
+}
+
+.reserve-text {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  align-items: center;
+  justify-items: center;
+}
+
+.rating-container {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  /* border: green solid 1px; */
+  width: 75%;
+  justify-items: right;
+  justify-self: right;
+}
+
+.rating-info {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.each-review {
+  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+  gap: 5px;
+}
