--- a/frontend/src/components/NewSpotPage/NewSpotPage.css
+++ b/frontend/src/components/NewSpotPage/NewSpotPage.css
@@ -20,6 +20,8 @@ textarea {
 .new-form-container {
   display: grid;
   justify-items: center;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  padding: 15px;
 }
 
 .new {
