--- a/frontend/src/components/LandingPage/Landing.css
+++ b/frontend/src/components/LandingPage/Landing.css
@@ -5,6 +5,8 @@
   max-width: 1000px;
   margin: 0 auto;
   padding: 20px;
+  /* background-color: white; */
+  border-radius: 10px;
 }
 
 .all-spots-tiles {
