--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -3,12 +3,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #dee7e4;
 }
 
 .spot-details-container {
   max-width: 1000px;
   width: 100%;
   margin: 0 auto;
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  padding: 10px;
   /* border: green solid 1px; */
 }
 
@@ -77,7 +82,7 @@ body {
 .reserve-button {
   background-color: #183d3d;
   color: white;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
 .each-review {
