--- a/frontend/src/components/Spot/Spot.css
+++ b/frontend/src/components/Spot/Spot.css
@@ -3,10 +3,21 @@
   aspect-ratio: 1 / 1;
 }
 
+.image-info {
+  transition: box-shadow 0.2s;
+  border-radius: 5px;
+  float: left;
+}
+
+.image-info:hover {
+  box-shadow: 0 0 15px #183d3d;
+}
+
 .tooltip {
   position: relative;
   display: inline-block;
   background-color: white;
+  border-radius: 5px 5px 0px 0px;
 }
 
 .tooltip .tooltiptext {
@@ -80,8 +91,12 @@
   color: white;
   border-radius: 10px;
   padding: 5px;
+  margin-top: 5px;
 }
 
 button:hover {
   cursor: pointer;
+  transform: scale(1.2);
+  /* background-color: #5c8374;
+  color: white; */
 }
