--- a/frontend/src/components/Reviews/Reviews.css
+++ b/frontend/src/components/Reviews/Reviews.css
@@ -6,3 +6,11 @@
   padding: 5px;
   margin-top: 5px;
 }
+
+.post-review-bttn button {
+  background-color: #183d3d;
+  color: white;
+  border-radius: 10px;
+  padding: 5px;
+  margin-top: 5px;
+}
