--- a/frontend/src/components/Spot/Spot.css
+++ b/frontend/src/components/Spot/Spot.css
@@ -11,6 +11,7 @@
 
 .image-info:hover {
   box-shadow: 0 0 15px #183d3d;
+  /* transform: scale(1.05); */
 }
 
 .tooltip {
@@ -91,12 +92,12 @@
   color: white;
   border-radius: 10px;
   padding: 5px;
-  margin-top: 5px;
+  margin-top: 7px;
 }
 
 button:hover {
   cursor: pointer;
-  /* transform: scale(1.2); */
+  transform: scale(1.2);
   /* background-color: #5c8374;
   color: white; */
 }
